[package]
name = "ceph-rbd-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
reqwest = "0.12.2"
tokio = { version = "1.36.0", features = ["full"] }
