[package]
name = "ceph-rbd-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.79"
axum = "0.7.5"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
once_cell = "1.19.0"
pretty_assertions = "1.4.0"
prometheus-client = "0.22.2"
reqwest = { version = "0.11.26", features = ["json"] }
reqwest-middleware = "0.2.5"
reqwest-retry = "0.4.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
task-local-extensions = "0.1.4"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
tracing-subscriber = "0.3.18"
url = "2.5.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
